<resources>
    <string name="app_name">Holo Cast</string>
    <string name="private_broadcasting_app_id">15fddb73a64148729776841aeb72ce5a</string>

    <string name="ar_mode">AR mode</string>
    <string name="agora_mode">Agora mode</string>
    <string name="show_point">Show point cloud</string>
    <string name="hide_point">Hide point cloud</string>
    <string name="show_plane">Show plane</string>
    <string name="hide_plane">Hide plane</string>
    <string name="name">Name</string>
    <string name="Phone_Number">Phone number</string>
    <string name="Language">Language</string>
    <string name="Experience">Experience</string>
    <string name="Expert">Expert_type</string>
    <string name="join_new_class">Join New Class</string>
    <string-array name="roles_array">
        <item>Teacher</item>
        <item>Student</item>
        <item>Business</item>
    </string-array>
</resources>

